2008-01-15  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7122: IRRE - Implement TYPO3AJAX handler for Inline Relational Record Editing

2008-01-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7138: RTE is not rendered in Tabs
	* Added feature #6845: Make preserving DIV sections a configurable RTE processing option

2008-01-14  Ingo Renner  <ingo@typo3.org>

	* fixed #6932: Unlike the default preview language, fields of additionalPreviewLanguages are shown if they are empty. credits Helmut Ummel

2008-01-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* htmlArea RTE: Update manual and version to 1.6.4dev

2008-01-11  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7124: Add some more functionality to new AJAX interface in the TYPO3 back-end

2008-01-10  Benjamin Mack  <mack@xnos.org>

	* (feature) Added #7096: Consistent interface for AJAX calls in the TYPO3 Backend

2008-01-10  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5421: Problem ignoring extension constraints
	* Fixed bug #7105: Default value of image_orient is invalid (Thanks to Steffen Kamper)

2008-01-09  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6957: Removed bottom button panel in alt_doc.php
	* (feature) Added #6995 CSH text is now displayed with CSS hover when in icon mode (Thanks to Chris Lindenmueller)

2008-01-08  Benjamin Mack  <mack@xnos.org>

	* (bugfix) Followup for #1678: limit to language; made the variable names better (Thanks to Helmut Hummel)
	* (bugfix) Fixed #7101: CType bullets not rendered correctly (thanks to Steffen Kamper)
	* (bugfix) Fixed #6883: Added missing functions in typo3/template.php

2008-01-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6991: Enable stdWrap for wrapItemAndSub

2008-01-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #6961: Errors in link creation popup window

2008-01-06  Oliver Hader  <oh@inpublica.de>
